<resources>
    <string name="app_name">ButtonLight</string>

    <string name="title_section1">Feed Dog</string>
    <string name="title_section2">Wash Dishes</string>
    <string name="title_section3">Take out Trash</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Complete Task</string>

    <string name="action_settings">Settings</string>
    <string name="Title">Large Text</string>
    <string name="Spacing"> </string>
    <string name="Status">Status:</string>
    <string name="statVal">val</string>
    <string name="lastPressed">Time since last completed: </string>
    <string name="lastPressedVal">0</string>
    <string name="complete">Complete Action</string>

</resources>
